added getters for classes, fix and add tests, prganise tests and clean